--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Hello World</title>
     <style>
       body {
-        background-color: yellow;
-        color: white;
+        background-color: red;
+        color: black;
       }
     </style>
   </head>
