--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hello World</title>
     <style>
       body {
-        background-color: red;
+        background-color: white;
         color: black;
       }
     </style>
