--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
       body {
         background-color: white;
-        color: black;
+        color: yellow;
       }
     </style>
   </head>
